--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         }
     },
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "vimeo/psalm": "^3.16",
-        "lctrs/psalm-psr-container-plugin": "^0.3.0"
+        "lctrs/psalm-psr-container-plugin": "^0.3.0",
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "scripts": {
         "analyse": "psalm",
