--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0|^8.1",
         "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
